--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Nueva canción</h1>
 
         <!-- cover -->
-        <img src="img1.jpg" alt="" class="cover">
+        <img src="img/img1.jpg" alt="" class="cover">
 
 
         <!-- progress bar -->
