--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         </section>
 
         <!-- song list -->
-        <ul class="songs">
-            <li><a href="">Quemando Calorias</a></li>
-            <li><a href="">De Tanto Chimbiar</a></li>
-            <li><a href="">Aguante</a></li>
+        <ul class="songs" id="songs">
+            <!-- <li><a href="">Quemando Calorias</a></li>
+            <li><a href="" class="activo">De Tanto Chimbiar</a></li>
+            <li><a href="">Aguante</a></li> -->
         </ul>
 
     </main>
