--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Music Player</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="main.css">
-    <script src="./index.js"></script>
+    <script src="./index.js"  defer></script>
 
 </head>
 <body>
